--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@
 	<!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
 	<meta property="og:title" content="Turin.dev | Agencia de Desarrollo Web Profesional" />
 	<meta property="og:description" content="En Turin.dev creamos sitios web modernos, rápidos y optimizados. Agencia de desarrollo web con soluciones en diseño, frontend, backend y SEO." />
-	<meta property="og:image" content="../assets/images/main.jpg" />
+	<meta property="og:image" content="/images/main.jpg" />
 	<meta property="og:url" content="https://turin.dev/" />
 	<meta property="og:type" content="website" />
 
@@ -23,7 +23,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Turin.dev | Agencia de Desarrollo Web Profesional" />
 	<meta name="twitter:description" content="En Turin.dev creamos sitios web modernos, rápidos y optimizados. Agencia de desarrollo web con soluciones en diseño, frontend, backend y SEO." />
-	<meta name="twitter:image" content="../assets/images/main.jpg" />
+	<meta name="twitter:image" content="/images/main.jpg" />
 
 	<meta name="theme-color" content="#000000" />
 
