--- a/src/pages/api-test.astro
+++ b/src/pages/api-test.astro
@@ -19,7 +19,12 @@ interface ApiResponse {
   count: number;
 }
 
-const response = await fetch('https://ensalud.info/generator/api-actriz.php');
+const response = await fetch('https://ensalud.info/generator/api-actriz.php', {
+  headers: {
+    'Accept': 'application/json',
+    'User-Agent': 'turin.dev'
+  }
+});
 const data: ApiResponse = await response.json();
 ---
 
