--- a/src/pages/actriz/[actriz].astro
+++ b/src/pages/actriz/[actriz].astro
@@ -1,5 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
+import "../../styles/global.css";
+
 import { getActresses, type Actress } from '../../services/api';
 
 // Obtener el parámetro de la URL
