--- a/src/pages/actrices.astro
+++ b/src/pages/actrices.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import "../../styles/global.css";
+import "../styles/global.css";
 import { getActresses, type Actress, type ApiResponse } from '../services/api';
 
 const data = await getActresses();
