--- a/.vercel/output/functions/_render.func/src/pages/index.astro
+++ b/.vercel/output/functions/_render.func/src/pages/index.astro
@@ -4,6 +4,7 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import Portafolio from "../components/Portafolio.astro";
+import Habilidades from "../components/Habilidades.astro";
 import Testimonios from "../components/Testimonios.astro";
 import Servicios from "../components/Servicios.astro";
 import Footer from "../components/Footer.astro";
@@ -14,15 +15,14 @@ import Contacto from "../components/Contacto.astro";
 ---
 <Layout>
 	<Header />
-	<main class="w-full overflow-x-hidden">
-		<div class="max-w-[1400px] mx-auto px-4 sm:px-6 lg:px-8">
-			<Hero />
-			<Servicios />
-			<Portafolio />
-			<Testimonios />
-			<Blogs />
-			<Contacto />
-		</div>
+	<main class="w-full max-w-[1400px] mx-auto px-4 sm:px-6 lg:px-8">
+		<Hero />
+		<Servicios />
+		<Portafolio />
+		<Habilidades />
+		<Testimonios />
+		<Blogs />
+		<Contacto />
 	</main>
 	<Footer />
 </Layout>
