--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import GSAPLoader from '../components/GSAPLoader.astro';
+---
 <!doctype html>
 <html lang="es">
   <head>
@@ -27,10 +30,8 @@
     <div id="cursor-glow" class="cursor-glow"></div>
     <slot />
     
-    <!-- GSAP Scripts - Using different CDN for better compatibility -->
-    <script is:inline src="https://unpkg.com/gsap@3.12.2/dist/gsap.min.js"></script>
-    <script is:inline src="https://unpkg.com/gsap@3.12.2/dist/ScrollTrigger.min.js"></script>
-    <script is:inline src="https://unpkg.com/gsap@3.12.2/dist/Draggable.min.js"></script>
+    <!-- GSAP Loader Component -->
+    <GSAPLoader />
     
     <!-- Main JavaScript -->
     <script is:inline src="/main.js"></script>
